--- a/app/assets/stylesheets/payment.scss
+++ b/app/assets/stylesheets/payment.scss
@@ -29,3 +29,10 @@
   justify-content: space-between;
   padding: 0.2em 1em;
 }
+
+.payment__next{
+  display:flex;
+  justify-content: center;
+
+  margin-top: 2em;
+}
