Feat mailer environment

--- a/app/views/cart/payment.html.erb
+++ b/app/views/cart/payment.html.erb
@@ -32,7 +32,7 @@
       ***TWINT PAYMENT***
     </div>
     <div class="payment__next">
-      <a href="/">
+      <a href="/cart/confirmation">
         <btn name="next" class="cart_nextBtn">Confirmer l'achat</btn>
       </a>
     </div>
