--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,17 +1,22 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
-  </head>
-  <body>
-    <h1>Welcome to example.com</h1>
-    <p>
-      You have successfully signed up to example.com,
-      your username is.<br>
-    </p>
-    <p>
-      To login to the site, just follow this link
-    </p>
-    <p>Thanks for joining and have a great day!</p>
-  </body>
-</html>
+
+<h2 class="email-up">Confirmation de payement</h2>
+<h2 class="email-up">Merci pour ta commande !</h2>
+
+<div class=email-center>
+ <%=image_tag 'logo.jpeg' %>
+
+</div>
+<div class="email-text">
+  Nous avons bien reçu ta commande, elle te sera déliverée à l'adresse indiquée dans les plus brefs délais (7 jours ouvrables maximum).
+
+  Merci pour ton soutien, à bientôt !
+</div>
+<div class="email-bottom">
+Retrouve-nous sur :
+</div>
+<div class="email-bottom">
+www.thriftshop.ch
+</div>
+<div class="email-bottom">
+@thriftshopch
+</div>
