--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -1,38 +1,29 @@
+
+/*--------------
+  BASIC LAYOUT
+  --------------*/
+
 .card{
   height: 100%;
-  width: 25%;
+  width: 70%;
 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
 
-  padding: 0 0.2em;
+  margin: 2em auto;
 
-  @media screen and (min-width: 1500px) {
-    width: 15%;
-    padding: 0 1.5em;
-  }
 }
 
 .card__img{
-  max-width: 100%;
-  max-height: 100%;
+  &.img--home{
+    max-width: 100%;
+    max-height: 100%;
 
-  @media screen and (min-width: 600px) {
-    width: 250px;
-    height: 375px;
-
-    &.img--home{
-      width: 230px;
-      height: 360px;
-    }
+    width: 784px;
+    height: 954px;
   }
-  @media screen and (min-width: 1500px) {
-    width: 280px;
-    height: 420px;
-  }
-
 }
 
 .card__desc{font-size: 0.9em;
@@ -85,7 +76,53 @@
 
 
 .card__img--center{
-  display:flex;
 
-  justify-content: center;
+}
+
+/*--------------
+  DESKTOP LAYOUT
+  --------------*/
+
+@media only screen and (min-device-width: 480px){
+  .card{
+    height: 100%;
+    width: 25%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+
+    padding: 0 0.2em;
+
+    @media screen and (min-width: 1500px) {
+      width: 15%;
+      padding: 0 1.5em;
+    }
+  }
+
+  .card__img{
+    max-width: 100%;
+    max-height: 100%;
+
+    @media screen and (min-width: 600px) {
+      width: 250px;
+      height: 375px;
+
+      &.img--home{
+        width: 230px;
+        height: 360px;
+      }
+    }
+    @media screen and (min-width: 1500px) {
+      width: 280px;
+      height: 420px;
+    }
+  }
+
+  .card__img--center{
+    display:flex;
+
+    justify-content: center;
+  }
 }
