--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="main">
   <div class="main-title">
     <h2>THRIFT</h2>
-    <em class="main-title__desc">Buy beautiful and environmentally friendly clothes</em>
+    <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
   </div>
   <div class="home_cards">
     <% @items.each do |item| %>
