--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
     <style>
-      /* Email styles need to be inline */
+      .email-up{
+
+        font-size: 2.2em;
+        text-align: center;
+      }
+
+      .email-text{
+        font-size: 1.8em;
+        text-align: left;
+        padding: 0.5em 18%;
+        text-align:center;
+      }
+
+      .email-bottom{
+        margin-top:1em;
+        text-align: center;
+        font-size: 1.5em;
+      }
+      .email-center{
+        text-align:center;
+        padding: 1.5em 0;
+      }
+
+      img{
+        width:300px;
+      }
     </style>
   </head>
 
