--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -12,7 +12,7 @@
   justify-content: space-between;
   align-items: stretch;
 
-  margin: 2em auto;
+  margin: 3em auto;
 
 }
 
@@ -39,11 +39,11 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  max-height: 100px;
 
 
   h4{
-    margin: 0.8em 0;
+    margin: 0.7em 0;
+    font-size: 3em;
   }
 
 }
@@ -59,25 +59,28 @@
   justify-content: space-between;
   align-items: center;
   background-color: #d8e3df;
-  max-width: 220px;
+  font-size:2.5em;
+
   width: 100%;
   height: 40%;
 
+  margin-bottom: 1em;
+
   div{
     margin-left: 1em;
-    height:20px;
+
   }
 
   svg{
     width: 20%;
-    height: 20px;
+    height: 60px;
   }
 }
 
-
-.card__img--center{
-
+.card__add--added{
+  margin: 0.2em;
 }
+
 
 /*--------------
   DESKTOP LAYOUT
@@ -124,5 +127,9 @@
     display:flex;
 
     justify-content: center;
+  }
+
+  .card__add{
+    max-width: 220px;
   }
 }
