--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer>
   <div class="footer__links">
-    <a href="#">Terms of use</a>
+    <a href="#">Conditions d'utilisation</a>
   </div>
 </footer>
