--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -17,7 +17,7 @@
     if(cart.length == 0){
       el = document.getElementById("no-item");
       el.className="";
-      el.innerText="No items in your cart... Click on 'add to cart' to see it here."
+      el.innerText="No items in your cart... Click on 'AJOUTER AU PANIER' to see it here."
     } else if (cart.length == 1){
     } else {
       main = document.getElementById("main");
