--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,6 +13,10 @@
                           item: item}) %>
     <% end %>
   </div>
+  <div class="home_cards__link">
+    <%= link_to "Plus d'habits ...", items_path%>
+  </div>
+
 </div>
 
 <script type="text/javascript">
@@ -38,7 +42,7 @@
       buttons[i].lastElementChild.remove();
 
       var added = document.createElement("div");
-      added.textContent="ADDED TO CART";
+      added.textContent="AJOUTÉ AU PANIER";
       added.className="card__add--added"
 
       buttons[i].appendChild(added);
