--- a/app/views/items/add.js.erb
+++ b/app/views/items/add.js.erb
@@ -22,7 +22,7 @@ for(let i=0; i< buttons.length; i++){
       buttons[i].lastElementChild.remove();
 
       var added = document.createElement("div");
-      added.textContent="ADDED TO CART";
+      added.textContent="AJOUTÉ AU PANIER";
       added.className="card__add--added";
 
       buttons[i].appendChild(added);
