--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -31,7 +31,7 @@
       buttons[i].lastElementChild.remove();
 
       var added = document.createElement("div");
-      added.textContent="ADDED TO CART";
+      added.textContent="AJOUTÉ AU PANIER";
       added.className="card__add--added"
 
       buttons[i].appendChild(added);
