--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,11 +54,16 @@ header{
   margin: 0 2em 5em;
 }
 
-#main{
-  height: 83vh;
 
+#main{
   display: flex;
   flex-direction: column;
+}
+
+@media only screen and (min-device-width: 480px){
+  #main{
+    height: 83vh;
+  }
 }
 
 #main--content{
@@ -74,7 +79,6 @@ header{
 
 footer{
   height: 9vh;
-  position: relative;
 
   background-color: black;
   font-size: 0.8em;
@@ -82,8 +86,26 @@ footer{
   a{color:#fff;}
 
   display:flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
+
+  margin-top:3em;
+}
+
+@media only screen and (min-device-width: 480px){
+  footer{
+    height: 9vh;
+    position: relative;
+
+    background-color: black;
+    font-size: 0.8em;
+    color: #fff;
+    a{color:#fff;}
+
+    display:flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
 
 hr{margin:0;
