--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,3 +1,10 @@
 .footer__links{
+  font-size: 3em;
   padding: 0 2em;
+}
+
+@media only screen and (min-device-width: 480px){
+  .footer__links{
+    padding: 0 2em;
+  }
 }
