--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -36,6 +36,17 @@
   flex-direction: column;
 }
 
+.home_cards__link{
+  font-size: 2.5em;
+  text-align: center;
+
+  margin: 2em auto;
+
+  a {
+  color: blue;
+  }
+}
+
 /*--------------
   DESKTOP LAYOUT
   --------------*/
