--- a/app/views/application/_item_card.html.erb
+++ b/app/views/application/_item_card.html.erb
@@ -9,5 +9,6 @@
     <% end %>
     <%= render(partial: "add",
                locals: {item: item}) %>
+    <%= render(partial: "cart-link") %>
   </div>
 </div>
