--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -30,7 +30,7 @@
      buttons[i].lastElementChild.remove();
 
      var added = document.createElement("div");
-     added.textContent="ADDED TO CART";
+     added.textContent="AJOUTÉ AU PANIER";
      added.className="card__add--added"
 
      buttons[i].appendChild(added);
