--- a/app/assets/stylesheets/_item_card.scss
+++ b/app/assets/stylesheets/_item_card.scss
@@ -17,6 +17,13 @@
 }
 
 .card__img{
+  
+  max-width: 100%;
+  max-height: 100%;
+
+  width: 784px;
+  height: 954px;
+
   &.img--home{
     max-width: 100%;
     max-height: 100%;
@@ -125,8 +132,8 @@
 
   .card__img--center{
     display:flex;
-
     justify-content: center;
+
   }
 
   .card__add{
