--- a/app/views/application/_item_card--index.html.erb
+++ b/app/views/application/_item_card--index.html.erb
@@ -8,4 +8,5 @@
     <% end %>
     <%= render(partial: "add",
                locals: {item: item}) %>
+    <%= render(partial: "cart-link") %>
 </div>
