--- a/app/views/application/_cart-link.html.erb
+++ b/app/views/application/_cart-link.html.erb
@@ -1,3 +1,5 @@
-<%= button_tag('AJOUTER AU PANIER', class:  'card__add') do %>
-  <div class="card__add--added"><%= link_to "VOIR LE PANIER", cart_index_path %></div>
+<%= link_to cart_index_path do %>
+  <%= button_tag('AJOUTER AU PANIER', class:  'card__add') do %>
+    <div class="card__add--added">VOIR LE PANIER</div>
+  <% end %>
 <% end %>
