--- a/app/views/cart/payment.html.erb
+++ b/app/views/cart/payment.html.erb
@@ -1,3 +1,10 @@
+<div class="main-title">
+  <h2><%= link_to "THRIFT", root_path%></h2>
+  <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
+</div>
+<div class="main-title">
+  <%= render(partial: 'mobile-header')%>
+</div>
 <div class="center">
  <div class="payment__wrapper">
     <h4 class="payment__title">Votre commande:</h4>
