--- a/app/views/application/_item_card--show.html.erb
+++ b/app/views/application/_item_card--show.html.erb
@@ -3,6 +3,9 @@
     <h2><%= link_to "THRIFT", root_path%></h2>
     <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
   </div>
+  <div class="main-title">
+    <%= render(partial: 'mobile-header')%>
+  </div>
   <div class="card--show">
 
     <div class="card--show__card">
