--- a/app/views/application/_remove.html.erb
+++ b/app/views/application/_remove.html.erb
@@ -1,11 +1,11 @@
-<%= form_tag(remove_path, method: :get, remote: true) do %>
+<%= form_tag(remove_path, method: :get,class: "remove-form", remote: true) do %>
 
   <%= hidden_field_tag('item', item.id)%>
-  <%= button_tag('Remove', class:  'cart__remove') do %>
+  <%= button_tag('Remove', class: "cart__remove") do %>
     <div class="hidden">
       <%= item.id %>
     </div>
-    <div>Remove</div>
+    <div>ENLEVER DU PANIER</div>
   <% end %>
 
 <% end %>
