--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,11 +3,17 @@
     <h2><%= link_to "THRIFT", root_path%></h2>
     <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
   </div>
+  <div class="main-title">
+    <%= render(partial: 'mobile-header')%>
+  </div>
   <div class="items--index">
     <% @items.each do |item|%>
         <%= render(partial: 'item_card--index',
                    locals: {card_title: item.title, price: item.price, photo_url: item.photo_url, item: item})%>
     <% end %>
+  </div>
+  <div class="home_cards__link">
+    <%= link_to "Aller au panier...", cart_index_path%>
   </div>
 </div>
 <script type="text/javascript">
