--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -7,6 +7,10 @@
   margin: 6em auto;
 }
 
+#errorBox{
+  font-size:2em;
+}
+
 .all_cart{
   margin: 2em auto;
 
@@ -73,7 +77,7 @@
 }
 
 .cart_nextBtn--address{
-  margin: 0 0 2em;
+  margin: 2em 0;
 }
 
 .cart_nextBtnRow{
