--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,5 +1,5 @@
 .form_new_model{
-  width: 40%;
+  width: 90%;
   margin: 4em auto 0;
 }
 
@@ -9,19 +9,25 @@
 
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
+
+  font-size: 2em;
 }
 
 .input__text {
-  width: 50%;
+  width: 100%;
+
+  height: 70px;
 }
 
 .input__text_area{
-  width: 50%;
+  width: 100%;
   height: 100px;
 }
 
 .input-group__label{
-  width: 20%;
+  width: 100%;
+  padding:1em 0;
 }
 
 .form--title{
