--- a/app/views/cart/confirmation.html.erb
+++ b/app/views/cart/confirmation.html.erb
@@ -1,1 +1,9 @@
-<div>Merci de votre achat</div>
+<div class="main-title">
+  <h2><%= link_to "THRIFT", root_path%></h2>
+  <em class="main-title__desc">Magasin d'habits de seconde-main eco-friendly.</em>
+</div>
+<div class="main-title">
+  <%= render(partial: 'mobile-header')%>
+</div>
+
+<div class="payment__confirmation">Merci de votre achat</div>
