--- a/app/assets/stylesheets/payment.scss
+++ b/app/assets/stylesheets/payment.scss
@@ -11,28 +11,46 @@
 }
 
 .payment__title{
-  font-size: 1.2em;
+  font-size: 3em;
   margin-bottom:0;
 }
 
 .payment__title--livraison{
-  font-size: 1em;
+  font-size: 3em;
   margin-bottom:0;
 }
 
 .payment__twint{
   padding: 2em;
+
+  margin: 40em 0;
 }
+
 
 .payment__item{
   display:flex;
   justify-content: space-between;
-  padding: 0.2em 1em;
+  padding: 0.8em 1em;
+
+  font-size: 2.5em;
+
+  &.customer{
+    padding: 0.3em 1em;
+
+    font-style: italic;
+  }
 }
 
 .payment__next{
   display:flex;
   justify-content: center;
 
-  margin-top: 2em;
+  margin: 2em 0;
+}
+
+.payment__confirmation{
+  font-size: 3em;
+
+  text-align: center;
+  margin:2em auto 29em;
 }
