--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,9 +1,8 @@
-
 <h2 class="email-up">Confirmation de payement</h2>
 <h2 class="email-up">Merci pour ta commande !</h2>
 
 <div class=email-center>
- <%=image_tag 'logo.jpeg' %>
+ <%=image_tag attachments.inline['logo.jpeg'].url %>
 
 </div>
 <div class="email-text">
@@ -15,8 +14,8 @@
 Retrouve-nous sur :
 </div>
 <div class="email-bottom">
-www.thriftshop.ch
+Website - www.thriftshop.ch
 </div>
 <div class="email-bottom">
-@thriftshopch
+Instagram - @thriftshop__ch
 </div>
