--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,1 +1,5 @@
-YOU ARE BEAUTIFUL IN EVERY WAY
+Confirmation de payement
+
+Nous avons bien reçu ta commande, elle te sera déliverée à l'adresse indiquée dans les plus brefs délais (7 jours ouvrables maximum).
+
+Merci pour ton soutien, à bientôt !
