order cart in email

--- a/app/views/cart/payment.html.erb
+++ b/app/views/cart/payment.html.erb
@@ -166,6 +166,6 @@
     document.getElementById('street').value = user[3];
     document.getElementById('postalcode').value = user[4];
     document.getElementById('city').value = user[5];
-    document.getElementById('cart').value = cart;
+    document.getElementById('cart').value = JSON.stringify(cart);
   }
 </script>
