--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,4 +1,4 @@
-<h2 class="email-up">Confirmation de payement</h2>
+<h2 class="email-up">Confirmation de payement pour la commande <%= @order.id %></h2>
 <h2 class="email-up">Merci pour ta commande !</h2>
 
 <div class=email-center>
@@ -6,10 +6,31 @@
 
 </div>
 <div class="email-text">
-  Nous avons bien reçu ta commande, elle te sera déliverée à l'adresse indiquée dans les plus brefs délais (7 jours ouvrables maximum).
+  Nous avons bien reçu ta commande, elle te sera déliverée à
+  l'adresse indiquée dans les plus brefs délais.
 
   Merci pour ton soutien, à bientôt !
 </div>
+
+<h2 class="email-order">Résumé de la commande</h2>
+<div class="email-order__item"><%= @order.name %></div>
+<div class="email-order__item"><%= @order.firstname %></div>
+<div class="email-order__item"><%= @order.email %></div>
+<div class="email-order__item"><%= @order.street %></div>
+<div class="email-order__item"><%= @order.postalCode %></div>
+<div class="email-order__item"><%= @order.city %></div>
+
+<% $i = 0 %>
+
+<% for i in JSON.parse(@order.purchase) %>
+   <% i = Integer(i) %>
+   <div class="email-order__item">Item ID: <%= @items.find(i).id %></div>
+   <div class="email-order__item"><%= @items.find(i).title %></div>
+   <div class="email-order__item"><%= @items.find(i).price %> CHF</div>
+<% end %>
+
+
+
 <div class="email-bottom">
 Retrouve-nous sur :
 </div>
