Remove cart items confirmation

--- a/app/views/cart/confirmation.html.erb
+++ b/app/views/cart/confirmation.html.erb
@@ -7,3 +7,7 @@
 </div>
 
 <div class="payment__confirmation">Merci de votre achat</div>
+
+<script type="text/javascript">
+  localStorage.setItem('cart', '');
+</script>
