--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,5 +1,6 @@
-<h2 class="email-up">Confirmation de payement pour la commande <%= @order.id %></h2>
+<h2 class="email-up">Confirmation de paiement.</h2>
 <h2 class="email-up">Merci pour ta commande !</h2>
+<div class="email-up number">Numéro de commande: <%= @order.id %></div>
 
 <div class=email-center>
  <%=image_tag attachments.inline['logo.jpeg'].url %>
@@ -12,23 +13,25 @@
   Merci pour ton soutien, à bientôt !
 </div>
 
+
 <h2 class="email-order">Résumé de la commande</h2>
-<div class="email-order__item"><%= @order.name %></div>
-<div class="email-order__item"><%= @order.firstname %></div>
-<div class="email-order__item"><%= @order.email %></div>
-<div class="email-order__item"><%= @order.street %></div>
-<div class="email-order__item"><%= @order.postalCode %></div>
-<div class="email-order__item"><%= @order.city %></div>
 
-<% $i = 0 %>
+<div class="email-order__user">
+  <div class="email-order__item"><%= @order.name %></div>
+  <div class="email-order__item"><%= @order.firstname %></div>
+  <div class="email-order__item"><%= @order.email %></div>
+  <div class="email-order__item"><%= @order.street %></div>
+  <div class="email-order__item"><%= @order.postalCode %></div>
+  <div class="email-order__item"><%= @order.city %></div>
+</div>
 
-<% for i in JSON.parse(@order.purchase) %>
-   <% i = Integer(i) %>
-   <div class="email-order__item">Item ID: <%= @items.find(i).id %></div>
-   <div class="email-order__item"><%= @items.find(i).title %></div>
-   <div class="email-order__item"><%= @items.find(i).price %> CHF</div>
-<% end %>
-
+<div class="email-order__cart">
+  <% $i = 0 %>
+  <% for i in JSON.parse(@order.purchase) %>
+     <% i = Integer(i) %>
+     <div class="email-order__item"><%= @items.find(i).title %> // <%= @items.find(i).price %> CHF // Numéro de référence: <%= @items.find(i).id %></div>
+  <% end %>
+</div>
 
 
 <div class="email-bottom">
