--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -3,32 +3,57 @@
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
     <style>
-      .email-up{
+      img{
+        width: 250px;
+      }
 
-        font-size: 2.2em;
-        text-align: center;
+      .email-image{
+        text-align:center;
+        padding: 2em 0;
+      }
+
+      .email-title{
+        font-size: 1.5em;
+      }
+
+      .email-title__number{
+        font-size: 1.1em;
       }
 
       .email-text{
-        font-size: 1.8em;
-        text-align: left;
-        padding: 0.5em 18%;
-        text-align:center;
+        font-size: 1.2em;
+        margin: 2em 0;
       }
 
       .email-bottom{
-        margin-top:1em;
-        text-align: center;
-        font-size: 1.5em;
-      }
-      .email-center{
-        text-align:center;
-        padding: 1.5em 0;
+        margin:1em 0 2em;
+        padding:1em;
+        background-color: #ECECEC;
       }
 
-      img{
-        width:300px;
+      .email-contact__item{
+        padding:0.2em 0;
       }
+
+      .email-title__2{
+        font-size: 1.1em;
+      }
+
+      .email-order{
+        background-color: #FFFFFF;
+        margin:1em 0 2em;
+      }
+
+      .email-order__user{
+        margin: 1em 0;
+        font-style: italic;
+      }
+
+      .email-order__cart{
+        margin: 1em 0;
+        font-style: italic;
+      }
+
     </style>
   </head>
 
