--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,5 +1,33 @@
-Confirmation de payement
+<%=image_tag attachments.inline['logo.jpeg'].url %>
 
-Nous avons bien reçu ta commande, elle te sera déliverée à l'adresse indiquée dans les plus brefs délais (7 jours ouvrables maximum).
+Merci pour ta commande !
+Commande numéro <%= @order.id %>: confirmation de paiement
+
+Nous avons bien reçu ta commande, elle te sera déliverée à
+l'adresse indiquée dans les plus brefs délais.
 
 Merci pour ton soutien, à bientôt !
+
+Résumé de la commande:
+
+Information de livraison:
+
+<%= @order.name %>
+<%= @order.firstname %>
+<%= @order.email %>
+<%= @order.street %>
+<%= @order.postalCode %>
+<%= @order.city %>
+
+
+Information de commande:
+
+<% $i = 0 %>
+<% for i in JSON.parse(@order.purchase) %>
+   <% i = Integer(i) %>
+   <%= @items.find(i).title %> // <%= @items.find(i).price %> CHF // Numéro de référence: <%= @items.find(i).id %>
+<% end %>
+
+Retrouve-nous sur :
+Website - www.thriftshop.ch
+Instagram - @thriftshop__ch
